--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "ionic-angular": "3.9.5",
     "ionicons": "3.0.0",
     "micromatch": "^4.0.2",
-    "rxjs": "5.5.11",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.29"
   },
